tdf#99353 take the footgun away from FilterCache

FilterCache::impl_saveItem changes the properties of a config. item
one-by-one. But it also listens to the configuration changes and reloads
the whole item from the configuration on change...

Change-Id: I9e4ed1c6b013925d07f0942717fe3421f924279d